--- a/src/assets/styles/config.scss
+++ b/src/assets/styles/config.scss
@@ -6,6 +6,6 @@ $border-color: #dcdcdc;
 //背景色 主背景
 $bg-main: #fefefe;
 // 工具栏颜色
-$toolbar-color: #f3f3f3;
+$menu-color: #f3f3f3;
 // 内容颜色
 $color: #333;
