--- a/src/assets/styles/editor.scss
+++ b/src/assets/styles/editor.scss
@@ -1,6 +1,6 @@
 @import "./config.scss";
 @import "./icons.scss";
-@import "./toolbar.scss";
+@import "./menu.scss";
 @import "./text.scss";
 
 .#{$editor} {
