feature: set font-famliy

--- a/src/assets/styles/text.scss
+++ b/src/assets/styles/text.scss
@@ -4,6 +4,7 @@
   padding: 16px;
   overflow: auto;
   color: $color;
+  font-family: 'Microsoft YaHei', 'PingFangSC', 'Helvetica', sans-serif, 'Arial';
 
   &:focus {
     outline: none;
