feature: dialog style

--- a/src/assets/styles/config.scss
+++ b/src/assets/styles/config.scss
@@ -9,3 +9,13 @@ $bg-main: #fefefe;
 $menu-color: #f3f3f3;
 // 内容颜色
 $color: #333;
+// 按钮颜色
+$icon-color: #dcdcdc;
+// 按钮颜色
+$icon-color-hover: #999;
+// 标题颜色
+$title-color: #999;
+// 标题颜色
+$title-color-active: #333;
+// 标题颜色
+$title-color-hover: #666;
