--- a/src/assets/styles/editor.scss
+++ b/src/assets/styles/editor.scss
@@ -1,4 +1,5 @@
 @import "./config.scss";
+@import "./base.scss";
 @import "./icons.scss";
 @import "./menu.scss";
 @import "./text.scss";
@@ -6,5 +7,22 @@
 
 .#{$editor} {
   height: 400px;
+  color: $color;
   position: relative;
+
+  ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: $title-color;
+  }
+
+  ::-moz-placeholder { /* Firefox 19+ */
+    color: $title-color;
+  }
+
+  :-ms-input-placeholder { /* IE 10+ */
+    color: $title-color;
+  }
+
+  :-moz-placeholder { /* Firefox 18- */
+    color: $title-color;
+  }
 }
