feature: image upload and set url

--- a/src/assets/styles/dialog.scss
+++ b/src/assets/styles/dialog.scss
@@ -101,7 +101,7 @@
     height: 102px;
     position: absolute;
     left: 109px;
-    top: 0;
+    top: 16px;
     opacity: 0;
     filter: alpha(opacity=0);
     cursor: pointer;
