--- a/src/assets/styles/dialog.scss
+++ b/src/assets/styles/dialog.scss
@@ -128,14 +128,14 @@
     }
   }
 
+  &-width {
+    margin: 0 0 16px;
+    padding: 0 28px 0 8px;
+    width: calc(100% - 36px);
+  }
+
   &-url {
     margin: 0 0 16px;
-
-    &2 {
-      margin: 0 0 16px;
-      padding: 0 28px 0 8px;
-      width: calc(100% - 36px);
-    }
 
     &-box {
       position: relative;
