feature: select style

--- a/src/assets/styles/editor.scss
+++ b/src/assets/styles/editor.scss
@@ -4,6 +4,7 @@
 @import "./menu.scss";
 @import "./text.scss";
 @import "./dialog.scss";
+@import "./select.scss";
 
 .#{$editor} {
   height: 400px;
