feature: add fontname

--- a/src/assets/styles/select.scss
+++ b/src/assets/styles/select.scss
@@ -41,7 +41,7 @@
     top: 32px;
     left: -1px;
     width: 160px;
-    height: 120px;
+    max-height: 120px;
     overflow: auto;
     border: 1px solid $border-color;
 
