--- a/src/assets/styles/menu.scss
+++ b/src/assets/styles/menu.scss
@@ -7,6 +7,10 @@
     display: flex;
     // margin: 0 8px;
     margin: 8px;
+
+    &-font {
+      text-decoration: none;
+    }
   }
 
   &-area {
