--- a/src/assets/styles/dialog.scss
+++ b/src/assets/styles/dialog.scss
@@ -179,6 +179,7 @@ $input-size: $handle-size - 21;
     &-box {
       padding: 8px;
       height: 172px;
+      background: #fff;
     }
 
     &-inner {
