--- a/src/assets/styles/editor.scss
+++ b/src/assets/styles/editor.scss
@@ -5,6 +5,7 @@
 @import "./text.scss";
 @import "./dialog.scss";
 @import "./select.scss";
+@import "./table.scss";
 
 .#{$editor} {
   height: 400px;
