feature: link menu

--- a/src/assets/styles/text.scss
+++ b/src/assets/styles/text.scss
@@ -18,7 +18,12 @@
     width: calc(100% - 2px);
   }
 
-  & img {
+  &-link {
+    text-decoration: none;
+    color: $blue;
+  }
+
+  &-img {
     cursor: pointer;
 
     &:hover {
