feature: drag file to editor

--- a/src/assets/styles/editor.scss
+++ b/src/assets/styles/editor.scss
@@ -6,6 +6,7 @@
 @import "./dialog.scss";
 @import "./select.scss";
 @import "./table.scss";
+@import "./drag.scss";
 
 .#{$editor} {
   height: 400px;
