--- a/src/assets/styles/menu.scss
+++ b/src/assets/styles/menu.scss
@@ -2,6 +2,7 @@
   display: flex;
   border: 1px solid $border-color;
   background: $menu-color;
+  overflow-x: auto;
 
   &-link {
     display: flex;
