--- a/src/assets/styles/select.scss
+++ b/src/assets/styles/select.scss
@@ -52,6 +52,7 @@
     max-height: 120px;
     overflow: auto;
     border: 1px solid $border-color;
+    background: $white;
 
     &-item {
       font-size: 12px;
