feat($name): class name can be configured

--- a/src/assets/styles/text.scss
+++ b/src/assets/styles/text.scss
@@ -16,6 +16,7 @@
     background: $bg-main;
     height: calc(100% - 35px);
     width: calc(100% - 2px);
+    box-sizing: content-box;
   }
 
   &-link {
