--- a/src/assets/styles/menu.scss
+++ b/src/assets/styles/menu.scss
@@ -5,6 +5,21 @@
   flex-direction: row;
   flex-wrap: wrap;
 
+  &-title {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: normal;
+    margin: 8px 0 8px 8px;
+  }
+
+  &-often,
+  &-high {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
   &-link {
     display: flex;
     margin: 8px;
