feat($full): Add location customization in full screen

--- a/src/assets/styles/menu.scss
+++ b/src/assets/styles/menu.scss
@@ -50,6 +50,12 @@
     &-font {
       text-decoration: none;
     }
+
+    &-righttop {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
   }
 
   &-area {
