--- a/src/assets/styles/editor.scss
+++ b/src/assets/styles/editor.scss
@@ -41,4 +41,14 @@
   & i {
     font-style: italic !important;
   }
+
+  & blockquote {
+    margin: 0;
+    border-left: 5px solid #ccc;
+    padding: 1em 40px;
+
+    & p {
+      margin: 0;
+    }
+  }
 }
