--- a/src/assets/styles/editor.scss
+++ b/src/assets/styles/editor.scss
@@ -7,6 +7,7 @@
 @import "./select.scss";
 @import "./table.scss";
 @import "./drag.scss";
+@import "./palette.scss";
 
 .#{$editor} {
   height: 400px;
@@ -42,13 +43,14 @@
     font-style: italic !important;
   }
 
+  & p {
+    margin: 10px 0 !important;
+    word-break: break-all !important;
+  }
+
   & blockquote {
     margin: 0;
     border-left: 5px solid #ccc;
-    padding: 1em 40px;
-
-    & p {
-      margin: 0;
-    }
+    padding: 10px 40px;
   }
 }
