--- a/src/assets/styles/editor.scss
+++ b/src/assets/styles/editor.scss
@@ -34,6 +34,30 @@
     box-sizing: content-box !important;
   }
 
+  &-reset {
+    background: $menu-color;
+    border: 1px solid $border-color;
+    border-top: none;
+    text-align: right;
+
+    &-button {
+      width: 0;
+      height: 0;
+      overflow: hidden;
+      border-width: 10px 10px 0 0;
+      border-color: transparent #bcbcbc transparent transparent;
+      border-style: dashed solid dashed dashed;
+      font-size: 0;
+      vertical-align: bottom;
+
+      &-box {
+        padding: 10px;
+        display: inline-block;
+        cursor: s-resize;
+      }
+    }
+  }
+
   & strong,
   & b {
     font-weight: bold !important;
