style($select): Change the position when you drop down the two-line menu and stylelint

--- a/src/assets/styles/editor.scss
+++ b/src/assets/styles/editor.scss
@@ -39,6 +39,7 @@
     border: 1px solid $border-color;
     border-top: none;
     text-align: right;
+    position: relative;
 
     &-button {
       width: 0;
