fix($multi-language): Fix pop-ups and other customizable multi-language

--- a/src/assets/styles/select.scss
+++ b/src/assets/styles/select.scss
@@ -16,7 +16,7 @@
 
   &-btn {
     padding: 8px 24px 8px 8px;
-    text-decoration: none;
+    text-decoration: none !important;
     position: relative;
 
     &-font {
