--- a/src/assets/styles/editor.scss
+++ b/src/assets/styles/editor.scss
@@ -78,4 +78,10 @@
     border-left: 5px solid #ccc;
     padding: 10px 40px;
   }
+
+  & table {
+    display: table !important;
+    border-collapse: separate !important;
+    border-spacing: 2px !important;
+  }
 }
